--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+p{
+  margin: 0;
+  padding: 0;
+}
 
 button {
   border-radius: 8px;
@@ -52,6 +56,9 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+ul,ol{
+  list-style-type: none;
 }
 
 @media (prefers-color-scheme: light) {
